Minor changes, make tests complete
- Added blackbox to autotests

--- a/ew2021/cosim.ipynb
+++ b/ew2021/cosim.ipynb
@@ -122,7 +122,8 @@
     }
    },
    "source": [
-    "## Schematic procedure"
+    "## Schematic procedure\n",
+    "The configuration variable `SYNTHESIZE_TEST` determines the synthesis stage being run."
    ]
   },
   {
@@ -134,7 +135,7 @@
     }
    },
    "source": [
-    "The configuration variable `SYNTHESIZE_TEST` determines the synthesis stage being run.\n",
+    "\n",
     "You might want to run the entire sheet again after setting this to `True`."
    ]
   },
@@ -261,7 +262,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7f36153c9ac8>"
+       "<graphviz.dot.Digraph at 0x7f5527bffba8>"
       ]
      },
      "execution_count": 5,
@@ -469,7 +470,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.files.Source at 0x7f3615277080>"
+       "<graphviz.files.Source at 0x7f553c292518>"
       ]
      },
      "metadata": {},
