--- a/ew2021/index.ipynb
+++ b/ew2021/index.ipynb
@@ -31,7 +31,7 @@
     "* Integrated Waveform and RTL display\n",
     "* MyHDL extensions\n",
     "* Synthesis for Lattice ECP5 based platforms\n",
-    "* Automated testing (`pytest`)"
+    "* Automated testing (`pytest`)\n"
    ]
   },
   {
@@ -42,11 +42,10 @@
     }
    },
    "source": [
-    "#### Play on your own\n",
-    "\n",
-    "* Go to [https://github.com/hackfin/hdlplayground/tree/ew2021](https://github.com/hackfin/hdlplayground/tree/ew2021)\n",
-    "* Hit 'launch binder' button\n",
-    "* Be patient, it may take a few minutes to start"
+    "### Replay\n",
+    "* Open [https://github.com/hackfin/hdlplayground/tree/ew2021](https://github.com/hackfin/hdlplayground/tree/ew2021)\n",
+    "* Hit `launch binder` button, be patient\n",
+    "* Set notebook to `Trusted` or re-run cells"
    ]
   },
   {
