--- a/ew2021/sync_logic.ipynb
+++ b/ew2021/sync_logic.ipynb
@@ -265,7 +265,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.files.Source at 0x7fc1be2b6940>"
+       "<graphviz.files.Source at 0x7fd56cdb5710>"
       ]
      },
      "metadata": {},
@@ -344,12 +344,23 @@
     }
    },
    "source": [
-    "## Run the test bench"
+    "## Run the test bench\n",
+    "\n",
+    "Remove trace files:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! rm *.vcd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -390,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -401,7 +412,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "testbench.vcd  trace_map.vcd  trace_syn.vcd  uart_translator.vcd\r\n"
+      "testbench.vcd\r\n"
      ]
     }
    ],
@@ -422,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -440,7 +451,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
