--- a/ew2021/uart_loopback_test.ipynb
+++ b/ew2021/uart_loopback_test.ipynb
@@ -34,7 +34,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "hide_input": true,
+    "diff_ignore": [
+     "outputs/0/text"
+    ],
+    "hide_input": false,
     "init_cell": true
    },
    "outputs": [],
@@ -62,7 +65,8 @@
    "metadata": {
     "code_folding": [
      5,
-     19
+     19,
+     25
     ]
    },
    "outputs": [],
@@ -1131,7 +1135,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.files.Source at 0x7f8672d0cd68>"
+       "<graphviz.files.Source at 0x7fc637b01710>"
       ]
      },
      "execution_count": 5,
@@ -1384,7 +1388,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "diff_ignore": [
+     "outputs/0/text"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
