--- a/index.ipynb
+++ b/index.ipynb
@@ -22,6 +22,8 @@
     "\n",
     "* [Presentation](ew2021/index.ipynb) for embedded world conference 2021 digital\n",
     "\n",
+    "  To run as slides, [install RISE](rise-install.ipynb) prior to starting the presentation.\n",
+    "\n",
     "Automated testing of notebook is integrated [below](#Automated-notebook-tests)."
    ]
   },
@@ -96,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "tags": [
      "hide"
@@ -108,7 +110,7 @@
       "text/markdown": [
        "### Steps to **edit** files:\n",
        "\n",
-       "  * Upload vendor files (use the `Upload` button): [tests/lib/techlibs/ecp5](None/tree/work/tests/lib/techlibs/ecp5)\n",
+       "  * Upload vendor files (use the `Upload` button): [tests/lib/techlibs/ecp5](/tree/work/tests/lib/techlibs/ecp5)\n",
        "\n",
        "  * Check local configuration: <a href=\"/edit/work/tests/config.py\" target=\"_blank\">tests/config.py</a>\n",
        "  * Uncomment include statements: <a href=\"/edit/work/tests/lib/techlibs/ecp5/cells_sim.v\" target=\"_blank\">tests/lib/techlibs/ecp5/cells_sim.v</a>"
@@ -117,7 +119,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,20 +257,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cloning into 'myhdl-synthesis'...\n",
-      "remote: Enumerating objects: 71, done.\u001b[K\n",
-      "remote: Counting objects: 100% (71/71), done.\u001b[K\n",
-      "remote: Compressing objects: 100% (71/71), done.\u001b[K\n",
-      "remote: Total 807 (delta 42), reused 0 (delta 0), pack-reused 736\u001b[K\n",
-      "Receiving objects: 100% (807/807), 1.94 MiB | 3.58 MiB/s, done.\n",
-      "Resolving deltas: 100% (569/569), done.\n"
+      "fatal: destination path 'myhdl-synthesis' already exists and is not an empty directory.\r\n"
      ]
     }
    ],
@@ -278,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -289,15 +285,15 @@
       "platform linux -- Python 3.7.3, pytest-3.10.1, py-1.7.0, pluggy-0.8.0 -- /usr/bin/python3\n",
       "cachedir: .pytest_cache\n",
       "NB force regen: True\n",
-      "rootdir: /tmp/tmpz42lz_19, inifile: pytest.ini\n",
+      "rootdir: /tmp/tmpz0y_hlvw, inifile: pytest.ini\n",
       "plugins: notebook-0.6.1\n",
       "\u001b[1mcollecting ... \u001b[0mcollected 3 items\n",
       "\n",
       "test_ipycell.py::test_generic[sync_logic.ipynb] \u001b[32mPASSED\u001b[0m\u001b[36m                   [ 33%]\u001b[0m\n",
       "test_ipycell.py::test_generic[cosim.ipynb] \u001b[32mPASSED\u001b[0m\u001b[36m                        [ 66%]\u001b[0m\n",
-      "test_ipycell.py::test_generic[uart_loopback_test.ipynb] \u001b[32mPASSED\u001b[0m\u001b[36m           [100%]\u001b[0m\n",
+      "test_ipycell.py::test_generic[blackbox.ipynb] \u001b[32mPASSED\u001b[0m\u001b[36m                     [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m\u001b[1m========================== 3 passed in 113.91 seconds ==========================\u001b[0m\n"
+      "\u001b[32m\u001b[1m========================== 3 passed in 63.48 seconds ===========================\u001b[0m\n"
      ]
     }
    ],
@@ -328,7 +324,8 @@
     "import ew2021\n",
     "import tempfile\n",
     "\n",
-    "VERIFIED  = [ \"sync_logic.ipynb\", \"cosim.ipynb\", \"uart_loopback_test.ipynb\" ]\n",
+    "VERIFIED  = [ \"sync_logic.ipynb\", \"cosim.ipynb\", \"blackbox.ipynb\" ]\n",
+    "# VERIFIED += [  \"uart_loopback_test.ipynb\" ]\n",
     "\n",
     "@pytest.mark.parametrize(\"uut\", VERIFIED)\n",
     "def test_generic(nb_regression, uut):\n",
