--- a/ew2021/autotest.ipynb
+++ b/ew2021/autotest.ipynb
@@ -50,6 +50,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "livereveal": {
+   "autolaunch": true
   }
  },
  "nbformat": 4,
