Minor adaptations for merged display
- Split off skipped parts (Generator classes, ...)
- Added merge.ipynb to merge NBs into `merged.ipynb`

--- a/ew2021/conclusion.ipynb
+++ b/ew2021/conclusion.ipynb
@@ -98,7 +98,7 @@
     "* Questions (Chat-Sidebar)\n",
     "* Contact:\n",
     "\n",
-    "![section5](section5.png)"
+    "[![logo](https://section5.ch/section5.png)](https://section5.ch)"
    ]
   }
  ],
@@ -123,6 +123,9 @@
   },
   "livereveal": {
    "autolaunch": true
+  },
+  "rise": {
+   "transition": "none"
   }
  },
  "nbformat": 4,
