--- a/ew2021/cosim_intro.ipynb
+++ b/ew2021/cosim_intro.ipynb
@@ -172,7 +172,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7fc1684637f0>"
+       "<graphviz.dot.Digraph at 0x7fd5a75c9ba8>"
       ]
      },
      "metadata": {},
@@ -283,6 +283,9 @@
   },
   "livereveal": {
    "autolaunch": true
+  },
+  "rise": {
+   "transition": "none"
   }
  },
  "nbformat": 4,
