--- a/ew2021/uart_loopback_test.ipynb
+++ b/ew2021/uart_loopback_test.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "Setup for verification of a UART loopback on two levels:\n",
     "\n",
-    "* [After synthesis (mapped to abstract units)](#Testing)\n",
+    "* [After translation (to RTL)](#Testing)\n",
     "* [After technology mapping](#Testing-technology-mapping)\n",
     "\n",
     "This code is also making usage of external Verilog implementations of a portable and synthesizeable Block RAM."
@@ -37,12 +37,12 @@
     "diff_ignore": [
      "outputs/0/text"
     ],
-    "hide_input": false,
+    "hide_input": true,
     "init_cell": true
    },
    "outputs": [],
    "source": [
-    "! rm *.vcd"
+    "! rm -f *.vcd"
    ]
   },
   {
@@ -56,7 +56,10 @@
     "## UART 'translator'\n",
     "\n",
     "Instead of a direct loopback, we insert a somewhat more complex UART core and use some simple\n",
-    "translation by masking characters (type lower caps words into the console)"
+    "translation by masking characters (type lower caps words into the console):\n",
+    "\n",
+    "```uctrl.uart_txr.next = uart_data & 0b01011111\n",
+    "```"
    ]
   },
   {
@@ -64,9 +67,7 @@
    "execution_count": 3,
    "metadata": {
     "code_folding": [
-     5,
-     19,
-     25
+     5
     ]
    },
    "outputs": [],
@@ -138,7 +139,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "code_folding": [
+     0
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -148,7 +153,7 @@
       "\u001b[32mCREATE Module: 'counter_0'\u001b[0m\n",
       "\u001b[32mAdding module with name:\u001b[0m counter_1_1_1_3\n",
       "CONVERT_RTL tree >>>>>> 'UART_TRANSLATOR_UART_CORE_0_UART_RX_0_COUNTER_0_WORKER' \n",
-      "\u001b[7;31mTRUNC\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:29 Implicit carry truncate: bitcount[3:], src[4:]\n",
+      "\u001b[7;31mTRUNC\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:32 Implicit carry truncate: bitcount[3:], src[4:]\n",
       "============================================================================\n",
       "DONE instancing submodules\n",
       "\u001b[32m========================================================\u001b[0m\n",
@@ -169,38 +174,38 @@
       "============ BULK COLLECT <b> for IdString \"\\bram_2psync_1\" ============\n",
       "============ BULK COLLECT <a> for IdString \"\\bram_2psync_1\" ============\n",
       "============ BULK COLLECT <b> for IdString \"\\bram_2psync_1\" ============\n",
-      "config param ADDR = 6\n",
-      "config param DATA = 8\n",
+      "config param ADDR_W = 6\n",
+      "config param DATA_W = 8\n",
       "\u001b[32mAdding module with name:\u001b[0m bram_2psync\n",
       "============ BULK COLLECT <a> for IdString \"\\bram_2psync\" ============\n",
       "============ BULK COLLECT <b> for IdString \"\\bram_2psync\" ============\n",
       "============ BULK COLLECT <a> for IdString \"\\bram_2psync\" ============\n",
       "============ BULK COLLECT <b> for IdString \"\\bram_2psync\" ============\n",
-      "DEFAULT PARAM ADDR = 6\n",
-      "DEFAULT PARAM DATA = 16\n",
+      "DEFAULT PARAM ADDR_W = 6\n",
+      "DEFAULT PARAM DATA_W = 16\n",
       "\u001b[32m========================================================\u001b[0m\n",
       "\u001b[32mCREATE Module: 'bram_2psync_1'\u001b[0m\n",
       "\u001b[32m========================================================\u001b[0m\n",
       "\u001b[32mCREATE Module: 'clock_div_0'\u001b[0m\n",
       "\u001b[32mAdding module with name:\u001b[0m clock_div_1_1_1_1_10\n",
       "CONVERT_RTL tree >>>>>> 'UART_TRANSLATOR_UART_CORE_0_CLOCK_DIV_0_WORKER' \n",
-      "\u001b[7;31mTRUNC\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:239 Implicit carry truncate: count16[4:], src[5:]\n",
-      "\u001b[7;31mTRUNC\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:243 Implicit carry truncate: counter[16:], src[17:]\n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:240 (other) missing assignments, assuming defaults for txen\n",
+      "\u001b[7;31mTRUNC\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:242 Implicit carry truncate: count16[4:], src[5:]\n",
+      "\u001b[7;31mTRUNC\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:246 Implicit carry truncate: counter[16:], src[17:]\n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:243 (other) missing assignments, assuming defaults for txen\n",
       "============================================================================\n",
       "DONE instancing submodules\n",
       "\u001b[32m========================================================\u001b[0m\n",
       "\u001b[32mCREATE Module: 'uart_rx_0'\u001b[0m\n",
       "\u001b[32mAdding module with name:\u001b[0m uart_rx_3_1_1_8_1_1_1_1\n",
       "CONVERT_RTL tree >>>>>> 'UART_TRANSLATOR_UART_CORE_0_UART_RX_0_GENERATE_RXCLK_EN' \n",
-      "\u001b[7;31mTRUNC\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:110 Implicit carry truncate: count[4:], src[5:]\n",
+      "\u001b[7;31mTRUNC\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:113 Implicit carry truncate: count[4:], src[5:]\n",
       "CONVERT_RTL tree >>>>>> 'UART_TRANSLATOR_UART_CORE_0_UART_RX_0_MID_SAMPLE' \n",
       "CONVERT_RTL tree >>>>>> 'UART_TRANSLATOR_UART_CORE_0_UART_RX_0_FSM' \n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:128 (other) missing assignments, assuming defaults for state\n",
       "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:131 (other) missing assignments, assuming defaults for state\n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:120 (other) missing assignments, assuming defaults for state\n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:134 (other) missing assignments, assuming defaults for state\n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:123 (other) missing assignments, assuming defaults for state\n",
       "CONVERT_RTL tree >>>>>> 'UART_TRANSLATOR_UART_CORE_0_UART_RX_0_SHIFT' \n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:143 (other) missing assignments, assuming defaults for dsr\n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:146 (other) missing assignments, assuming defaults for dsr\n",
       "CONVERT_RTL tree >>>>>> 'UART_TRANSLATOR_UART_CORE_0_UART_RX_0_ASSIGN0' \n",
       "CONVERT_RTL tree >>>>>> 'UART_TRANSLATOR_UART_CORE_0_UART_RX_0_TX_STROBE' \n",
       "CONVERT_RTL tree >>>>>> 'UART_TRANSLATOR_UART_CORE_0_UART_RX_0_ASSIGN1' \n",
@@ -213,10 +218,10 @@
       "\u001b[32mCREATE Module: 'uart_tx_0'\u001b[0m\n",
       "\u001b[32mAdding module with name:\u001b[0m uart_tx_1_8_1_1_1_1_1_1\n",
       "CONVERT_RTL tree >>>>>> 'UART_TRANSLATOR_UART_CORE_0_UART_TX_0_FSM' \n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:59 (other) missing assignments, assuming defaults for state\n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:48 (other) missing assignments, assuming defaults for state\n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:48 (default) missing assignments, assuming defaults dsr\n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:48 (default) missing assignments, assuming defaults advance\n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:62 (other) missing assignments, assuming defaults for state\n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:51 (other) missing assignments, assuming defaults for state\n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:51 (default) missing assignments, assuming defaults dsr\n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:51 (default) missing assignments, assuming defaults advance\n",
       "CONVERT_RTL tree >>>>>> 'UART_TRANSLATOR_UART_CORE_0_UART_TX_0_SHIFT' \n",
       "CONVERT_RTL tree >>>>>> 'UART_TRANSLATOR_UART_CORE_0_UART_TX_0_ASSIGN0' \n",
       "============================================================================\n",
@@ -261,7 +266,13 @@
       "Non-Signal member stat__name\n",
       "Non-Signal member stat__otype\n",
       "============ BULK COLLECT <ctrl> for IdString \"\\uart_core_1_1_1_1\" ============\n",
-      "============ BULK COLLECT <stat> for IdString \"\\uart_core_1_1_1_1\" ============\n",
+      "============ BULK COLLECT <stat> for IdString \"\\uart_core_1_1_1_1\" ============\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "CONVERT_RTL tree >>>>>> 'UART_TRANSLATOR_UART_CORE_0_ASSIGN' \n",
       "============================================================================\n",
       "++++++++ clock_div_0: clock_div_1_1_1_1_10 (Module) ++++++++\n",
@@ -336,8 +347,8 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "hide_input": true,
-    "scrolled": false,
+    "hide_input": false,
+    "scrolled": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -360,9 +371,9 @@
        "<!-- Generated by graphviz version 2.40.1 (20161225.0304)\n",
        " -->\n",
        "<!-- Title: uart_core_1_1_1_1 Pages: 1 -->\n",
-       "<svg width=\"1800pt\" height=\"386pt\"\n",
-       " viewBox=\"0.00 0.00 1800.00 386.48\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
-       "<g id=\"graph0\" class=\"graph\" transform=\"scale(.5273 .5273) rotate(0) translate(4 729)\">\n",
+       "<svg width=\"2880pt\" height=\"618pt\"\n",
+       " viewBox=\"0.00 0.00 2880.00 618.36\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
+       "<g id=\"graph0\" class=\"graph\" transform=\"scale(.8436 .8436) rotate(0) translate(4 729)\">\n",
        "<title>uart_core_1_1_1_1</title>\n",
        "<polygon fill=\"#ffffff\" stroke=\"transparent\" points=\"-4,4 -4,-729 3409.92,-729 3409.92,4 -4,4\"/>\n",
        "<text text-anchor=\"middle\" x=\"1702.96\" y=\"-7.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">uart_core_1_1_1_1</text>\n",
@@ -1135,7 +1146,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.files.Source at 0x7fc637b01710>"
+       "<graphviz.files.Source at 0x7fd2e9ef5be0>"
       ]
      },
      "execution_count": 5,
@@ -1145,7 +1156,7 @@
    ],
    "source": [
     "from ys_aux import *\n",
-    "to_svg(design, \"uart_core_1_1_1_1\", 250)"
+    "to_svg(design, \"uart_core_1_1_1_1\", 400)"
    ]
   },
   {
@@ -1387,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "diff_ignore": [
      "outputs/0/text"
@@ -1422,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "diff_ignore": [
      "outputs/0/text"
@@ -1549,7 +1560,13 @@
       "Non-Signal member ctrl__otype\n",
       "Non-Signal member stat__name\n",
       "Non-Signal member stat__otype\n",
-      "============ BULK COLLECT <ctrl> for IdString \"\\uart_core_1_1_1_1\" ============\n",
+      "============ BULK COLLECT <ctrl> for IdString \"\\uart_core_1_1_1_1\" ============\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "============ BULK COLLECT <stat> for IdString \"\\uart_core_1_1_1_1\" ============\n",
       "CONVERT_RTL tree >>>>>> 'UART_TRANSLATOR_UART_CORE_0_0_ASSIGN' \n",
       "============================================================================\n",
@@ -1574,18 +1591,18 @@
       "Member stat_rxdata already instanced\n",
       "CONVERT_RTL tree >>>>>> 'UART_TRANSLATOR_ASSIGN' \n",
       "CONVERT_RTL tree >>>>>> 'UART_TRANSLATOR_UART_LB_TRANSLATE' \n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-3-7ffe11467978>:35 (other) missing assignments, assuming defaults for uart_data\n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-3-7ffe11467978>:35 (other) missing assignments, assuming defaults for uctrl_select_uart_rxr\n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-3-7ffe11467978>:35 (other) missing assignments, assuming defaults for state\n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-3-7ffe11467978>:40 (other) missing assignments, assuming defaults for uctrl_uart_txr\n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-3-7ffe11467978>:40 (other) missing assignments, assuming defaults for uctrl_select_uart_txr\n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-3-7ffe11467978>:40 (other) missing assignments, assuming defaults for state\n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-3-7ffe11467978>:48 (other) missing assignments, assuming defaults for state\n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-3-7ffe11467978>:34 (default) missing assignments, assuming defaults uart_data\n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-3-7ffe11467978>:34 (default) missing assignments, assuming defaults uctrl_select_uart_rxr\n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-3-7ffe11467978>:34 (other) missing assignments, assuming defaults for state\n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-3-7ffe11467978>:34 (default) missing assignments, assuming defaults uctrl_uart_txr\n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-3-7ffe11467978>:34 (default) missing assignments, assuming defaults uctrl_select_uart_txr\n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-5-7ffe11467978>:35 (other) missing assignments, assuming defaults for uart_data\n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-5-7ffe11467978>:35 (other) missing assignments, assuming defaults for uctrl_select_uart_rxr\n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-5-7ffe11467978>:35 (other) missing assignments, assuming defaults for state\n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-5-7ffe11467978>:40 (other) missing assignments, assuming defaults for uctrl_uart_txr\n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-5-7ffe11467978>:40 (other) missing assignments, assuming defaults for uctrl_select_uart_txr\n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-5-7ffe11467978>:40 (other) missing assignments, assuming defaults for state\n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-5-7ffe11467978>:48 (other) missing assignments, assuming defaults for state\n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-5-7ffe11467978>:34 (default) missing assignments, assuming defaults uart_data\n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-5-7ffe11467978>:34 (default) missing assignments, assuming defaults uctrl_select_uart_rxr\n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-5-7ffe11467978>:34 (other) missing assignments, assuming defaults for state\n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-5-7ffe11467978>:34 (default) missing assignments, assuming defaults uctrl_uart_txr\n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-5-7ffe11467978>:34 (default) missing assignments, assuming defaults uctrl_select_uart_txr\n",
       "============================================================================\n",
       "++++++++ uart_core_0_0: uart_core_1_1_1_1 (Module) ++++++++\n",
       "DONE instancing submodules\n"
@@ -1621,7 +1638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "diff_ignore": [
      "outputs/0/text"
@@ -1654,7 +1671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1708,6 +1725,9 @@
   },
   "livereveal": {
    "autolaunch": true
+  },
+  "rise": {
+   "transition": "none"
   }
  },
  "nbformat": 4,
